<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.notekeep.local.graph.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/graph_title"
        app:navigationIcon="@drawable/ic_back"
        android:background="#DD121212" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="24dp"
        android:gravity="center"
        android:text="@string/graph_empty"
        android:alpha="0.6"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGraphSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/action_settings" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBackToGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:fabSize="mini"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/graph_back_to_global" />

</FrameLayout>
